--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                 <div id="conteiner-seta">
                     <div id="acerto-seta">
-                        <img id="icone-seta" src="/img/pra-cima.png" alt="">
+                        <img id="icone-seta" src="/img/pra-cima.png" alt="seta apontando para cima">
                         <a id="texto-icone" href="#">
                             voltar <br> ao topo
                         </a>
